*SVN*

* Added gzip compression for JavaScript, CSS, and HTML to default lighttpd.conf [DHH]


*1.1.0* (March 27th, 2005)

* Allow db:fixtures:load to load a subset of the applications fixtures. [Chad Fowler]

  ex.

   rake db:fixtures:load FIXTURES=customers,plans

* Update to Prototype 1.5.0_pre1 [Sam Stephenson]

* Update to script.aculo.us 1.6 [Thomas Fuchs]

* Add an integration_test generator [Jamis Buck]

* Make all ActionView helpers available in the console from the helper method for debugging purposes. n.b.: Only an 80% solution. Some stuff won't work, most will. [Marcel Molina Jr.]

  ex.

    >> puts helper.options_for_select([%w(a 1), %w(b 2), %w(c 3)])
    <option value="1">a</option>
    <option value="2">b</option>
    <option value="3">c</option>
    => nil

* Replaced old session rake tasks with db:sessions:create to generate a migration, and db:sessions:clear to remove sessions. [Rick Olson]

* Reject Ruby 1.8.3 when loading Rails; extract version checking code. [Chad Fowler]

* Remove explicit loading of RailsInfo and RailsInfoController. [Nicholas Seckar]

* Move RailsInfo and RailsInfoController to Rails::Info and Rails::InfoController. [Nicholas Seckar]

* Extend load path with Railties' builtin directory to make adding support code easy. [Nicholas Seckar]

* Fix the rails_info controller by explicitly loading it, and marking it as not reloadable. [Nicholas Seckar]

* Fixed rails:freeze:gems for Windows #3274 [paul@paulbutcher.com]

* Added 'port open?' check to the spawner when running in repeat mode so we don't needlessly boot the dispatcher if the port is already in use anyway #4089 [guy.naor@famundo.com]

* Add verification to generated scaffolds,  don't allow get for unsafe actions [Michael Koziarski]

* Don't replace application.js in public/javascripts if it already exists [Cody Fauser]

* Change test:uncommitted to delay execution of `svn status` by using internal Rake API's. [Nicholas Seckar]
